<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="244dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/tgghis" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/sunderkandb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hh"
                android:shadowColor="@color/colorButtonShadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="7"
                android:text="@string/home_sunderkand"
                android:textColor="@color/colorButtonText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/hanumanb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hh"
                android:shadowColor="@color/colorButtonShadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="7"
                android:text="@string/home_chalisa"
                android:textColor="@color/colorButtonText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/aaarti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hh"
                android:shadowColor="@color/colorButtonShadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="7"
                android:text="@string/home_aarti"
                android:textColor="@color/colorButtonText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hh"
                android:shadowColor="@color/colorButtonShadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="7"
                android:text="@string/home_share"
                android:textColor="@color/colorButtonText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/hh"
                android:shadowColor="@color/colorButtonShadow"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="7"
                android:text="@string/home_about"
                android:textColor="@color/colorButtonText"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
